refactor: get rid of first observables

--- a/ng/src/app/app-list/app-list.component.html
+++ b/ng/src/app/app-list/app-list.component.html
@@ -1,9 +1,14 @@
-<mat-card class="p-0 ">
-  @for (app of appList | async; track app; let last = $last; let first = $first) {
-  <app-list-item [app]="app" [ngClass]="{ 'last-item': last, 'first-item': first }"></app-list-item>
+<mat-card class="p-0">
+  @for (
+    app of appList | async;
+    track app;
+  ) {
+    <app-list-item [app]="app" />
   }
 </mat-card>
 
 @if ((appList | async)?.length === 0) {
-<div class="alert alert-primary" role="alert">No Apps for this selection</div>
+  <div class="alert alert-primary" role="alert">
+    No Apps for this selection
+  </div>
 }
