--- a/ng/src/app/filter-options/filter-checkboxes/filter-checkboxes.component.html
+++ b/ng/src/app/filter-options/filter-checkboxes/filter-checkboxes.component.html
@@ -1,6 +1,6 @@
 <form [formGroup]="checkboxForm">
   @for (
-    checkboxGroup of checkboxGroupsSig();
+    checkboxGroup of checkboxGroups();
     track checkboxGroup
   ) {
     <div
