--- a/ng/src/app/filter-options/filter-selects/filter-selects.component.html
+++ b/ng/src/app/filter-options/filter-selects/filter-selects.component.html
@@ -1,6 +1,6 @@
 <form [formGroup]="selectForm" class="row">
   @for (
-    selectGroup of selectGroupsSig();
+    selectGroup of selectGroups();
     track selectGroup;
   ) {
     <div class="col-12 col-md-3">
