--- a/ng/src/app/app-list/app-list.component.html
+++ b/ng/src/app/app-list/app-list.component.html
@@ -1,14 +1,20 @@
-<mat-card class="p-0">
-  @for (
-    app of appList();
-    track app;
-  ) {
-    <app-list-item [app]="app" />
-  }
-</mat-card>
-
-@if ((appList())?.length === 0) {
-  <div class="alert alert-primary" role="alert">
-    No Apps for this selection
+@if (loading()) {
+  <div class="d-flex justify-content-center my-4">
+    <mat-spinner></mat-spinner>
   </div>
+} @else {
+  <mat-card class="p-0">
+    @for (
+      app of appList();
+      track app;
+    ) {
+      <app-list-item [app]="app" />
+    }
+  </mat-card>
+
+  @if ((appList())?.length === 0) {
+    <div class="alert alert-primary" role="alert">
+      No Apps for this selection
+    </div>
+  }
 }
