feat: remove subscriptions and refactor effects to computed signals

--- a/ng/src/app/filter-options/filter-checkboxes/filter-checkboxes.component.html
+++ b/ng/src/app/filter-options/filter-checkboxes/filter-checkboxes.component.html
@@ -1,35 +1,32 @@
-<form [formGroup]="checkboxForm">
-  @for (
-    checkboxGroup of checkboxGroups();
-    track checkboxGroup
-  ) {
-    <div
-      class="d-flex justify-content-between flex-wrap flex-column flex-md-row filter-checkbox-container"
+<div>
+  @for ( checkboxGroup of processedGroups(); track checkboxGroup.Category ) {
+  <div
+    class="d-flex justify-content-between flex-wrap flex-column flex-md-row filter-checkbox-container"
+  >
+    <mat-checkbox
+      [checked]="!areSomeCheckboxesSelected()"
+      [disabled]="!areSomeCheckboxesSelected()"
+      (change)="showAll()"
     >
-      <mat-checkbox
-        [checked]="!areSomeCheckboxesSelected()"
-        [disabled]="!areSomeCheckboxesSelected()"
-        (change)="showAll()"
-      >
-        Show all
-      </mat-checkbox
-      >
-      @for (
-        option of checkboxGroup?.Options;
-        track option
-      ) {
-        @if (!option) {
-          {{ option | json }}
-        }
-        <mat-checkbox
-          [class.disable]="option?.Disabled"
-          [formControlName]="option?.Title"
-          (change)="toggleCheckbox(option, $event?.checked)"
-          [matTooltip]="option?.Tooltip"
-        >
-          {{ option?.Tag }}
-        </mat-checkbox>
+      Show all
+    </mat-checkbox>
+
+    @for (
+      option of checkboxGroup?.Options;
+      track option. Id
+    ) {
+      @if (!option) {
+        {{ option | json }}
       }
-    </div>
+      <mat-checkbox
+        [class.disable]="option?.Disabled"
+        (change)="onCheckboxChange(option, $event.checked)"
+        [matTooltip]="option?.Tooltip"
+        [checked]="isOptionSelected(option)"
+      >
+        {{ option?.Tag }} {{ isOptionSelected(option) }}
+      </mat-checkbox>
+    }
+  </div>
   }
-</form>
+</div>
